--- a/templates/ticket_view.html
+++ b/templates/ticket_view.html
@@ -14,10 +14,12 @@
       $(document).ready(function() {
         $("#changelog h3.change").addAnchor("Link to this change");
         $("div.description").find("h1,h2,h3,h4,h5,h6").addAnchor("Link to this section");
-        $("#action input[@name='action']").click(function() {
+        function updateActionFields() {
           $("#resolve_choice").enable($("#resolve").checked());
           $("#reassign_choice").enable($("#reassign").checked());
-        }).click();
+        }
+        $("#action input[@name='action']").click(updateActionFields);
+        updateActionFields();
       });
     </script>
   </head>
