--- a/templates/admin_plugins.html
+++ b/templates/admin_plugins.html
@@ -7,7 +7,7 @@
   <xi:include href="admin.html" />
   <head>
     <title>Plugins</title>
-    <script type="text/javascript" src="${htdocs_location}js/folding.js"></script>
+    <script type="text/javascript" src="${chrome.htdocs_location}js/folding.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){ $("div.plugin h3").enableFolding() });
     </script>
