--- a/templates/error.html
+++ b/templates/error.html
@@ -38,12 +38,12 @@
            value="${'dev' in trac.version and 'devel' or trac.version}" />
     <input type="hidden" name="summary" value="$message" />
     <textarea name="description">
-Please edit the pre-filled description as you see fit
-(in particular, remove those first two lines!)
-
 ==== How to Reproduce ====
 
 While doing a $req.method operation on `$req.path_info`, Trac issued an internal error.
+
+''(please provide additional details here)''
+
 <py:if test="req.args">
 Request parameters:
 {{{
