--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -31,6 +31,7 @@ dt em {
  text-decoration: none;
 }
 dt .time { color: #999; font-size: 80%; }
+dt.highlight { background-color: #ffa; } 
 dd { 
  font-size: 80%;
  margin: 0 0 .75em 5.5em;
